--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,6 @@
-@charset "utf-8";
-/* CSS Document */
+/*Common CSS */
 /* Date: 2015-11-08*/
+@charset "utf-8";
 html{color:#000;background:#FFF}
 * {	margin:0;padding:0;list-style:none;}
 table{border-collapse:collapse;border-spacing:0}
